# PlenopticImageProcessing

./: .gitignore  CMakeLists.txt  CMakeMacros.txt  DoxyDefs.dox  LICENSE  README.md  doxy.config.in  uncrustify.cfg
PIPAlgorithms/: AlgorithmInterfaces.hh  CMakeLists.txt  PlenopticTools.cpp  PlenopticTools.hh
PIPAlgorithms/CUDA/: AllInFocusSynthesis.cu  AllInFocusSynthesis.hh  CudaMinifuncs.cuh  DisparityCrosscheck.cu  DisparityCrosscheck.hh  DisparityEstimation_OFL.cu  DisparityEstimation_OFL.hh  DisparityEstimation_basic.cu  DisparityEstimation_basic.hh  DisparityRefinement_Crosscheck.cu  DisparityRefinement_Crosscheck.hh  MedianFill.cu  MedianFill.hh  MicrolensFusion.cu  MicrolensFusion.hh  MlaVisualization.cu  MlaVisualization.hh  UnprojectFromDisparity_basic.cu  UnprojectFromDisparity_basic.hh  VignettingNormalization.cu  VignettingNormalization.hh
PIPBase/: BasicTypes.hh  CMakeLists.txt  CVImage.cpp  CVImage.hh  DataIO.cpp  DataIO.hh  Exceptions.hh  MatrixTransforms.hh  MatrixTypes.hh  PlenopticTypes.hh  SimilarityMeasures.hh  VectorTypes.hh
PIPInterOpCUDA/: CMakeLists.txt  CUDADataArray.cpp  CUDADataArray.hh  CUDAImageArray.cpp  CUDAImageArray.hh  CUDAImageTexture.cpp  CUDAImageTexture.hh  CUDAVolumeTexture.cpp  CUDAVolumeTexture.hh
PIPInterOpCUDA/CUDA/: CudaHelper.cu  CudaHelper.hh
PIPMiniTools/: CMakeLists.txt  CrossCheckRawdepth.cpp
QtPIP/: CMakeLists.txt  QtGraphicsView.cpp  QtGraphicsView.hh  QtMetaTypes.hh  QtSliderWidget.cpp  QtSliderWidget.hh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SampleData/: MLAconfig.xml
